Fixing issues on iOS

--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -26,6 +26,7 @@ $t_grey: #bdbdbd;
 
 /* Ionic overrides*/
 
+$positive: $t_blue !default;
 $calm: $t_lightblue !default;
 $energized: $t_red !default;
 $assertive: $t_red !default;
